<resources>
    <string name="app_name">JOBNOW</string>
    <string name="login">Log In</string>
    <string name="add">Add</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="category_name">Category Name</string>
    <string name="company">Company Name</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_password">Re-enter New Password</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="google_api_keys">AIzaSyBLM7A7SFW27KWvT4iup819oleh25p7_Bo</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="set_interview_time">Set Interview Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="send">Send</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="change_pass">Change Password</string>
    <string name="app_settings">App Settings</string>
    <string name="get_more_job_credits">Get More Job Credits</string>
    <string name="string_desc">Refer new Employers and \nget on Free Job Credit per \nsuccessful</string>
    <string name="string_desc2">Please confirm this is your correct email and we will send your our Job Credits Packages information</string>
    <string name="send_email_get_list_price">Receive Pricing Details</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="desc_shortlist_detail">We would love to hear your thoughts, concerns or problems with anything so we can improve our app</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="applied">Applied</string>
    <string name="appSetting">Settings</string>
    <string name="job">Job</string>
    <string name="shortlist">Shortlist</string>
    <string name="interview">Interview</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myProfile">My Profile</string>
    <string name="experience">Experience</string>
    <string name="skills">Skills</string>
    <string name="tab">TAB</string>
    <string name="emailAddress">Email Address</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="country">Country</string>
    <string name="postalCode">Postal Code</string>
    <string name="description">Description</string>
    <string name="addExprience">Add Exprience</string>
    <string name="addSkill">Add Skill</string>
    <string name="editSkill">Edit Skill</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search_hint">Enter job title</string>
    <string name="jobList">Full Time</string>
    <string name="mapList">Part Time</string>
    <string name="jobSave">Saved</string>
    <string name="jobApplied">Applied</string>
    <string name="jobChangePass">Change Password</string>
    <string name="jobFeedback">Feedback</string>
    <string name="jobPolicy">Privacy Policy</string>
    <string name="jobTermOfUse">Term Of Use</string>
    <string name="title_activity_detail_jobs">DetailJobsActivity</string>
    <string name="job_description"><![CDATA[- Perform equipment troubleshooting and implement courter measure - \n Perform equipment program modification (PLC, HMI & Robotics programming) \n - Production equipment maitenance planning \n- Lead, train and manage a team of engineering staff in functional tasks \n- Lead improvement project and activities]]></string>
    <string name="facebook_app_id">383531245347423</string>
    <string name="pleaseInputEmail">Please input email</string>
    <string name="pleaseInputsubject">Please input Subject/Title</string>
    <string name="pleaseInputdesFeedback">Please input feedback content</string>
    <string name="pleaseInputOldPass">Please input old password</string>
    <string name="pleaseInputNewPass">Please input new password</string>
    <string name="pleaseInputReEnter">Please input re-enter password</string>
    <string name="pleasediffrent">Re-Enter Password Error</string>
    <string name="pleaseInputPassword">Please input password</string>
    <string name="emailNotValid">Email not validate</string>
    <string name="pleaseInputFullName">Please input fullname</string>
    <string name="pleaseInputFirstName">Please input firstname</string>
    <string name="pleaseInputLastName">Please input lastname</string>
    <string name="pleaseInputPhoneNumber">Please make sure your phone number is 10 digits together with country code</string>
    <string name="error_connect">please check your network connection</string>
    <string name="AllSpecializations">All Specializations</string>
    <string name="selectIndustry">Please Select a Industry</string>
    <string name="selectCompanySize">Please Select Company Size</string>
    <string name="price">Price</string>
    <string name="search_result">Search Result</string>
    <string name="takephoto">Take photo</string>
    <string name="gallery">Gallery</string>
    <string name="addPhoto">Add photo</string>
    <string name="selectFile">Select file</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="loading">Loading, please wait…</string>
    <string name="update">Update</string>
    <string name="companyName">Company Name</string>
    <string name="jobOrPosition">Job or Position</string>
    <string name="pleaseInputCompanyName">Please input company name</string>
    <string name="pleaseInputCategoryName">Please input category name</string>
    <string name="pleaseInputJobOrPosition">Please input job or position</string>
</resources>