<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".acitvity.RegisterActivity">

    <com.newtech.jobnow.common.CustomEditextHelveticaneuelight
        android:background="@drawable/bg_edittext"
        android:textColorHint="@color/colorTextHint"
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="left|center_vertical"
        android:hint="@string/full_name"
        android:imeOptions="actionNext"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16sp" />


    <com.newtech.jobnow.common.CustomEditextHelveticaneuelight
        android:background="@drawable/bg_edittext"
        android:textColorHint="@color/colorTextHint"
        android:id="@+id/edtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="left|center_vertical"
        android:hint="@string/phone_number"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16sp" />
    <com.newtech.jobnow.common.CustomEditextHelveticaneuelight
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_edittext"
        android:gravity="left|center_vertical"
        android:hint="@string/email"
        android:textColorHint="@color/colorTextHint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16sp" />

    <com.newtech.jobnow.common.CustomEditextHelveticaneuelight
        android:background="@drawable/bg_edittext"
        android:textColorHint="@color/colorTextHint"
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="left|center_vertical"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="10dp"
        android:password="true"
        android:singleLine="true"
        android:textSize="16sp" />




    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_btn_signup"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />

    <com.newtech.jobnow.common.CustomTextViewHelveticaneue
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="by signing up, I have read and aggree to JobNow.com\n Term of Service and Privacy "
        android:textColor="#666666" />


</LinearLayout>
