<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_gravity="center"
        android:background="@drawable/bg_edittext"
        android:padding="10dp"
        android:id="@+id/edtEmail"
        android:textColorHint="@color/background_border"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:background="@drawable/bg_edittext"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/edtPassword"
        android:textColorHint="@color/background_border"
        android:maxLines="1"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:singleLine="true" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_signup"
        android:text="@string/login"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white" />


</LinearLayout>
