<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.jobnow.common.CustomTextViewHelveticaneue
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/addExprience"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.jobnow.common.CustomEditextHelveticaneuelight
            android:id="@+id/edCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/companyName"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp" />

        <com.jobnow.common.CustomEditextHelveticaneuelight
            android:id="@+id/edJobOrPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/jobOrPosition"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/btn_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/textView11"
                android:drawableRight="@mipmap/ic_datetime"
                android:background="@drawable/bg_edit_interview"
                android:padding="10dp"
                android:text="@string/start_time"
                android:textColor="@color/colorText"
                android:layout_weight="1"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/btn_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/textView11"
                android:drawableRight="@mipmap/ic_datetime"
                android:background="@drawable/bg_edit_interview"
                android:padding="10dp"
                android:text="@string/end_time"
                android:textColor="@color/colorText"
                android:layout_weight="1"
                android:gravity="center_vertical" />
        </LinearLayout>
        <com.jobnow.common.CustomEditextHelveticaneuelight
            android:id="@+id/editSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="Salary(SGD)"
            android:inputType="number"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />
        <com.jobnow.common.CustomEditextHelveticaneuelight
            android:id="@+id/edDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:gravity="left|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_cancel"
                android:text="Cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_signup"
                android:text="Save"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
