<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.newtech.jobnow.common.CustomEditextHelveticaneuelight
                android:id="@+id/edtOldPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:gravity="left|center_vertical"
                android:hint="@string/old_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/colorTextHint"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <com.newtech.jobnow.common.CustomEditextHelveticaneuelight
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:gravity="left|center_vertical"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/colorTextHint"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <com.newtech.jobnow.common.CustomEditextHelveticaneuelight
                android:id="@+id/edtReEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:gravity="left|center_vertical"
                android:hint="@string/re_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/colorTextHint"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />


            <Button
                android:id="@+id/btnChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_signup"
                android:text="@string/change_pass"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
