<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_sign_in"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/bgActionBar"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <com.jobnow.common.CustomTextViewHelveticaneue
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/get_more_job_credits"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp20"
                android:textStyle="bold" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >


        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn_signup"
            android:padding="10dp"
            android:layout_height="75dp"
            android:id="@+id/layout_invite">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_email"
                android:id="@+id/imageView3"
                android:layout_weight="1" />

            <com.jobnow.common.CustomTextViewLatoRegular
                android:text="@string/string_desc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textView12"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/img_next"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_next"
                android:id="@+id/img_next"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <TextView
            android:text="OR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:gravity="center" />

        <com.jobnow.common.CustomTextViewLato
            android:text="Buy Credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:padding="10dp"
            android:background="@color/colorBgShortlist"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp" />

        <com.jobnow.common.CustomTextViewHelveticaneuelight
            android:text="@string/string_desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            android:gravity="center"
            android:padding="10dp" />

        <com.jobnow.common.CustomEditextHelveticaneuelight
            android:id="@+id/edtEmailInviteSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:gravity="left|center_vertical"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAlignment="center"
            android:inputType="textEmailAddress" />
        <Button
            android:id="@+id/btnRecivePricing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_signup"
            android:text="@string/send_email_get_list_price"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
